Removed mention of forum from Contact page.

--- a/contact/index.html
+++ b/contact/index.html
@@ -177,7 +177,7 @@
   <h1 class="page-title">Contact</h1>
   <h3 id="get-in-touch-with-me">Get In Touch With Me</h3>
 
-<p>I am available at <a href="mailto:contact@bojjenclon.com">contact@bojjenclon.com</a>. This email address can be used for job inquiries or general questions about the website. This is not a personal email account and should not be used as such; for non-business contact, please direct your attention to the forum.</p>
+<p>I am available at <a href="mailto:contact@bojjenclon.com">contact@bojjenclon.com</a>. This email address can be used for job inquiries or general questions about the website. This is not a personal email account and should not be used as such.</p>
 
 </div>
 
